--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
     "browser-image-compression": "^2.0.2",
+    "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
