feat.로그인 기능 추가

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
