--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
-    "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "next": "14.2.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
