--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
