--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^11.1.15",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
